--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ img {
   justify-content: space-between;
   align-items: center;
   padding: 14px 24px;
+  min-height: 50px;
 }
 
 .logo {
@@ -52,24 +53,77 @@ img {
   text-decoration: none;
 }
 
-.menu {
+.humburger {
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  background-color: #6070ff;
+  margin: 3px 0;
+  height: 3px;
   width: 24px;
-  height: 24px;
+  transition: all 0.3s ease;
+}
+
+.humburger.active .bar:nth-child(1) {
+  transform: translateY(5px) rotate(45deg);
+  background-color: #fff;
+  z-index: 1;
+}
+
+.humburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.humburger.active .bar:nth-child(3) {
+  transform: translateY(-7px) rotate(-45deg);
+  background-color: #fff;
+  z-index: 1;
+}
+
+.nav-menue2 {
+  display: none;
 }
 
 .nav-menue {
-  display: none;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  background-color: #396df2;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 50px 24px;
+  left: -100%;
+  top: 0;
+  -webkit-backdrop-filter: blur(500px);
+  backdrop-filter: blur(500px);
+  transition: all 0.3s ease;
+}
+
+.nav-menue a {
+  color: #fff;
+  font-weight: 600;
+  font-size: 28px;
+  margin: 10px 0;
+  transition: all 0.5s ease;
+}
+
+.nav-menue.active {
+  left: 0;
+  opacity: 0.9;
 }
 
 .section {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
   background-image: url("images/mobile_bg.png");
   background-position: right bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 100px;
 }
 
 .title {
@@ -96,6 +150,11 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+}
+
+.nav-menue a:hover {
+  color: #661d79;
+  transition: all 0.5s ease;
 }
 
 .social_icons {
@@ -131,7 +190,7 @@ img {
   gap: 88px;
 }
 
-.card1 {
+#card1 {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   padding: 16px;
@@ -140,7 +199,7 @@ img {
   flex-direction: column;
 }
 
-.card2 {
+#card2 {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   padding: 16px;
@@ -149,7 +208,7 @@ img {
   flex-direction: column;
 }
 
-.card3 {
+#card3 {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   padding: 16px;
@@ -158,7 +217,7 @@ img {
   flex-direction: column;
 }
 
-.card4 {
+#card4 {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   padding: 16px;
@@ -178,11 +237,19 @@ img {
   line-height: 44px;
 }
 
+.modaltitle {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #091e42;
+}
+
 .project_info {
   display: flex;
   gap: 5px;
   align-items: center;
-  margin-top: 10px;
+
+  /* margin-top: 10px; */
 }
 
 .ul {
@@ -190,6 +257,14 @@ img {
 }
 
 .company p {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+  text-transform: uppercase;
+}
+
+.pop-company {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
@@ -210,6 +285,14 @@ img {
   margin-right: 30px;
 }
 
+.pop-role {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
+  margin-right: 30px;
+}
+
 .year {
   font-weight: 600;
   font-size: 13px;
@@ -217,12 +300,21 @@ img {
   color: #7a869a;
 }
 
+.pop-year {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
+}
+
 .description {
-  width: 90%;
+  width: 100%;
   margin-top: 10px;
 }
 
 .description p {
+  height: 6rem;
+  overflow: hidden;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
@@ -240,6 +332,7 @@ img {
 
 #lang {
   background: #ebebff;
+  overflow: hidden;
   border-radius: 8px;
   padding: 4px 12px;
   font-weight: 500;
@@ -430,6 +523,18 @@ form button {
   border-radius: 8px;
 }
 
+.modalbox button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #6070ff;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  background: transparent;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
 form button:hover {
   background: #661d79;
   box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
@@ -446,6 +551,89 @@ form button:hover {
   height: 5px;
 }
 
+.modal-container {
+  margin: 0;
+  background: #c1c7d0;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  display: none;
+}
+
+.modalbox {
+  background-color: white;
+  padding: 24px;
+  border-radius: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 5% 5%;
+}
+
+.pop-top {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.modal-button-div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.modalbox button:hover {
+  background-color: #661d79;
+  color: white;
+}
+
+.sec-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.top-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.close-modal {
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+}
+
+.language_used_modal {
+  margin: 20px 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.language_used_modal li {
+  color: #396df2;
+  background: #ebebff;
+  border-radius: 8px;
+  padding: 4px 12px;
+  list-style: none;
+  text-align: center;
+  margin: 10px;
+}
+
+.popup-image {
+  max-width: 100%;
+}
+
+.button-image {
+  width: 20px;
+}
+
 @media (min-width: 768px) {
   body {
     padding: 24px;
@@ -456,31 +644,28 @@ form button:hover {
   }
 
   .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 14px 80px;
   }
 
-  .menu {
+  .humburger {
     display: none;
   }
 
-  .nav-menue {
+  .nav-menue2 {
     display: flex;
     flex-direction: row;
+    color: #396df2;
     gap: 15px;
   }
 
-  .nav-menue a:hover {
-    background: #661d79;
-    box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
-    color: #fff;
-    padding: 5px 10px;
+  .nav-menue2 a:hover {
+    color: #661d79;
+    padding: 2px;
     border: none;
-    border-radius: 3px;
+    font-size: 18px;
+    font-weight: 600;
     cursor: pointer;
-    transition: all 0.5s ease-out;
+    transition: all 0.5s ease;
   }
 
   .section {
@@ -499,7 +684,16 @@ form button:hover {
     transition: all 0.5s ease-out;
   }
 
-  .info p {
+  .description p {
+    height: 6rem;
+    overflow: hidden;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #344563;
+  }
+
+  .section .info p {
     animation-duration: 5s;
     animation-name: slidein;
   }
@@ -548,13 +742,13 @@ form button:hover {
     gap: 142px;
   }
 
-  .card1 {
+  #card1 {
     display: flex;
     flex-direction: row;
     gap: 46px;
   }
 
-  .card1:hover {
+  #card1:hover {
     box-shadow: 1px 8px 16px rgba(5, 10, 49, 0.24);
     color: #fff;
     padding: 20px;
@@ -564,7 +758,7 @@ form button:hover {
     transition: all 0.5s ease-out;
   }
 
-  .card2 {
+  #card2 {
     padding: 24px;
     display: flex;
     flex-direction: row-reverse;
@@ -572,7 +766,7 @@ form button:hover {
     gap: 46px;
   }
 
-  .card2:hover {
+  #card2:hover {
     box-shadow: 1px 8px 16px rgba(5, 10, 49, 0.24);
     color: #fff;
     padding: 20px;
@@ -582,7 +776,7 @@ form button:hover {
     transition: all 0.5s ease-out;
   }
 
-  .card3 {
+  #card3 {
     border-radius: 24px;
     padding: 24px;
     display: flex;
@@ -590,7 +784,7 @@ form button:hover {
     gap: 46px;
   }
 
-  .card3:hover {
+  #card3:hover {
     box-shadow: 1px 8px 16px rgba(5, 10, 49, 0.24);
     color: #fff;
     padding: 20px;
@@ -600,7 +794,7 @@ form button:hover {
     transition: all 0.5s ease-out;
   }
 
-  .card4 {
+  #card4 {
     border-radius: 24px;
     padding: 24px;
     display: flex;
@@ -609,7 +803,7 @@ form button:hover {
     gap: 46px;
   }
 
-  .card4:hover {
+  #card4:hover {
     box-shadow: 1px 8px 16px rgba(5, 10, 49, 0.24);
     color: #fff;
     padding: 20px;
@@ -617,10 +811,16 @@ form button:hover {
     border-radius: 3px;
     cursor: pointer;
     transition: all 0.5s ease-out;
+  }
+
+  .description {
+    width: 100%;
+    margin-top: 10px;
   }
 
   .img-container {
-    height: 400px;
+    height: 350px;
+    width: 300px;
   }
 
   .button-container {
@@ -729,5 +929,53 @@ form button:hover {
 
   .contact-hr {
     display: none;
+  }
+
+  .modal-container {
+    margin: 0;
+  }
+
+  .modalbox {
+    height: auto;
+    padding: 24px;
+    width: 75vw;
+    margin: 5% auto;
+  }
+
+  .modalbox .popup-image {
+    width: 100%;
+  }
+
+  .modalbox h3 {
+    width: 60vw;
+    font-size: 60px;
+  }
+
+  .modalbox a button {
+    font-size: 18px;
+    justify-content: center;
+  }
+
+  .language_used_modal {
+    margin: 40px 0;
+  }
+
+  .below-box {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+  }
+
+  .pop-up-description {
+    width: 70%;
+    padding: 30px 0;
+  }
+
+  .sec-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    width: 30%;
   }
 }
